grid-outer Resolve mobile carousel issue where image is not aligned with title

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -3251,7 +3251,7 @@ body.has-line-design.grid-compact .grid {
 .grid-outer {
   position: relative;
   flex-grow: 1;
-  padding: 0 var(--outer);
+  /* padding: 0 var(--outer); */
 }
 body.grid-compact .grid-outer {
   --outer: 0px;
@@ -10353,8 +10353,8 @@ p a {
 }
 .wrapper .grid__items-holder,
 .wrapper--full-padded .grid__items-holder {
-  margin-left: -32px;
-  margin-right: -32px;
+  /* margin-left: var(--outer-offset);
+  margin-right: var(--outer-offset); */
 }
 @media only screen and (min-width: 750px) {
   .wrapper.grid-container--inline .grid__items-holder,
